--- a/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/dataAnalysis.html
@@ -42,8 +42,8 @@
                 <div class="input-div">
                     <span class="input-label">列</span>
                     <div class="input-content dimension-content" data-type="column"  data-typede = "dimension"  ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动维度到这里，增加列" class="easyui-tooltip">
-                        <span ms-if="!data.selected_den.column || !data.selected_den.column.length" class="tips">拖动维度到这里，增加列</span>
-                        <span class="selected-dimension" ms-repeat-el="data.selected_den.column" draggable="true"  data-typede = "dimension" ms-on-dragstart="drag(event)"  ms-data-id=el.id ms-data-index=$index  ms-attr-id={{el.id}}>{{el.name}}</span>
+                        <span ms-if="!data.selected_den.column || !data.selected_den.column.length" class="tips">拖动左侧维度到这里，增加列</span>
+                        <span class="selected-dimension" ms-repeat-el="data.selected_den.column" draggable="true"  data-typede = "dimension" ms-on-dragstart="drag(event)"  ms-data-id=el.id ms-data-index=$index >{{el.name}}</span> <!-- ms-attr-id={{el.id}}-->
                     </div>
                     <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
@@ -52,8 +52,8 @@
                 <div class="input-div">
                     <span class="input-label">行</span>
                     <div class="input-content dimension-content" data-type="row"  data-typede = "dimension"  ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动维度到这里，增加行" class="easyui-tooltip">
-                        <span ms-if="!data.selected_den.row || !data.selected_den.row.length" class="tips">拖动维度到这里，增加行</span>
-                        <span class="selected-dimension" ms-repeat-el="data.selected_den.row" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index  ms-attr-id={{el.id}}>{{el.name}}</span>
+                        <span ms-if="!data.selected_den.row || !data.selected_den.row.length" class="tips">拖动左侧维度到这里，增加行</span>
+                        <span class="selected-dimension" ms-repeat-el="data.selected_den.row" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index >{{el.name}}</span><!-- ms-attr-id={{el.id}}-->
                     </div>
                       <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear"  style="width: 27px; height: 27px;"></a></span>
@@ -62,8 +62,8 @@
                 <div class="input-div">
                     <span class="input-label">度量</span>
                     <div class="input-content magnanimity-content" data-type="magnanimity" data-typede = "magnanimity" ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动度量到这里，增加数据" class="easyui-tooltip">
-                        <span ms-if="!data.selected_den.magnanimity || !data.selected_den.magnanimity.length" class="tips">拖动度量到这里，增加数据</span>
-                        <span class="selected-magnanimity" ms-repeat-el="data.selected_den.magnanimity" draggable="true" data-typede = "magnanimity"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index  ms-attr-id={{el.id}}>{{el.name}}</span>
+                        <span ms-if="!data.selected_den.magnanimity || !data.selected_den.magnanimity.length" class="tips">拖动左侧度量到这里，增加数据</span>
+                        <span class="selected-magnanimity" ms-repeat-el="data.selected_den.magnanimity" draggable="true" data-typede = "magnanimity"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index>{{el.name}}</span> <!-- ms-attr-id={{el.id}}-->
                     </div>
                       <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0"ms-click="clear" style="width: 27px; height: 27px;"></a></span>
@@ -72,8 +72,8 @@
                 <div class="input-div">
                     <span class="input-label">筛选</span>
                     <div class="input-content magnanimity-content" data-type="filter" data-typede = "dimension" ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" class="easyui-tooltip"  title="拖动到这里，增加数据">
-                        <span ms-if="!data.selected_den.filter || !data.selected_den.filter.length" class="tips">拖动到这里，增加数据</span>
-                        <span class="selected-filter" ms-repeat-el="data.selected_den.filter" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index  ms-attr-id={{el.id}}>
+                        <span ms-if="!data.selected_den.filter || !data.selected_den.filter.length" class="tips">拖动左侧维度到这里，增加筛选器</span>
+                        <span class="selected-filter" ms-repeat-el="data.selected_den.filter" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index > <!--ms-attr-id={{el.id}}--->
                            <a href="javascript:void(0)">
                                {{el.name}}
                            </a>
@@ -83,7 +83,7 @@
                      <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
                 </div>
 
-                <!--table-->
+           <!--     &lt;!&ndash;table&ndash;&gt;
                 <table class="easyui-datagrid" style="width:100%;margin-top:10px;"
                        data-options="rownumbers:true,singleSelect:true,url:'../demo/datagrid/datagrid_data1.json',method:'get'">
                     <thead>
@@ -100,7 +100,7 @@
                     </tr>
                     </thead>
                 </table>
-
+-->
             </div>
             <div title="Tab2" data-options="closable:true" style="overflow:auto;padding:20px;">
                 tab2fdsfds
