--- a/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/full_tab_v2.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="res/js/data_analysis.js"></script>
 
 </head>
-<body class="easyui-layout"  ms-controller="test" >
+<body class="easyui-layout body-content"  ms-controller="test" >
 	<div data-options="region:'west',split:true" class="leftbar" style="width:150px;padding:4px;">
 		<section class="section_left">
 			<h2 class="leftbar_title">维度</h2>
@@ -48,7 +48,7 @@
 			<ul id="mytab" class="nav nav-tabs" ms-each-el="data_all.tabs">
 				<li  class="active"  ms-if="data_all.current_tabid  == el.tabid" ><a href="javascript:void(0)" ms-click="setActiveTab(el.tabid, this)">{{el.tabname}}/sheet{{$index + 1}}</a></li>
 				<li  ms-if="data_all.current_tabid  != el.tabid"><a href="javascript:void(0)" ms-click="setActiveTab(el.tabid, this)"   >{{el.tabname}}/sheet{{$index + 1}}</a></li>
-				<li class="add-btn"  ms-if="data_all.tabs.length -1  == $index" ><a href="javascript:void (0)" ms-click="showDlg(event);">+</a></li>
+				<li ms-if="data_all.tabs.length -1  == $index" ><a  class="add-btn"  href="javascript:void (0)" ms-click="showDlg(event);">+</a></li>
 			</ul>
 
 			<div class="tab-content" id="tab_content">
@@ -98,70 +98,6 @@
 
 				<table id="dg"></table>
 				<div class="nodata">未查询到数据</div>
-			</div>
-		</div>
-
-
-		<div id="tab-tools">
-			<a href="javascript:void(0)" ms-click="addPanel()"> + </a>
-		</div>
-
-		<div id="tt" class="easyui-tabs" >
-			<div title="Tab1" style="padding:20px;" data-options="closable:true" >
-				<!--<div class="input-div">
-					<span class="input-label">列</span>
-					<div class="input-content dimension-content" data-type="column"  data-typede = "dimension"  ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动维度到这里，增加列" class="easyui-tooltip">
-						<span ms-if="!data.selected_den.column || !data.selected_den.column.length" class="tips">拖动维度到这里，增加列</span>
-						<span class="selected-dimension" ms-repeat-el="data.selected_den.column" draggable="true"  data-typede = "dimension" ms-on-dragstart="drag(event)"  ms-data-id=el.id ms-data-index=$index  >{{el.name}}</span>&lt;!&ndash;ms-attr-id={{el.id}}&ndash;&gt;
-					</div>
-                    <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
-                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
-				</div>
-
-				<div class="input-div">
-					<span class="input-label">行</span>
-					<div class="input-content dimension-content" data-type="row"  data-typede = "dimension"  ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动维度到这里，增加行" class="easyui-tooltip">
-						<span ms-if="!data.selected_den.row || !data.selected_den.row.length" class="tips">拖动维度到这里，增加行</span>
-						<span class="selected-dimension" ms-repeat-el="data.selected_den.row" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index >{{el.name}}</span>&lt;!&ndash; ms-attr-id={{el.id}}&ndash;&gt;
-					</div>
-                      <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
-                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear"  style="width: 27px; height: 27px;"></a></span>
-				</div>
-
-				<div class="input-div">
-					<span class="input-label">度量</span>
-					<div class="input-content magnanimity-content" data-type="magnanimity" data-typede = "magnanimity" ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" title="拖动度量到这里，增加数据" class="easyui-tooltip">
-						<span ms-if="!data.selected_den.magnanimity || !data.selected_den.magnanimity.length" class="tips">拖动度量到这里，增加数据</span>
-						<span class="selected-magnanimity" ms-repeat-el="data.selected_den.magnanimity" draggable="true" data-typede = "magnanimity"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index>{{el.name}}</span>&lt;!&ndash;  ms-attr-id={{el.id}}&ndash;&gt;
-					</div>
-                      <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
-                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0"ms-click="clear" style="width: 27px; height: 27px;"></a></span>
-				</div>
-
-				<div class="input-div">
-					<span class="input-label">筛选</span>
-					<div class="input-content magnanimity-content" data-type="filter" data-typede = "dimension" ms-on-drop="drop(event)" ms-on-dragover="allowDrop(event)" class="easyui-tooltip"  title="拖动到这里，增加数据">
-						<span ms-if="!data.selected_den.filter || !data.selected_den.filter.length" class="tips">拖动到这里，增加数据</span>
-                        <span class="selected-filter" ms-repeat-el="data.selected_den.filter" draggable="true" data-typede = "dimension"  ms-on-dragstart="drag(event)"  ms-data-id=el.id  ms-data-index=$index> &lt;!&ndash;  ms-attr-id={{el.id}}&ndash;&gt;
-                           <a href="javascript:void(0)">
-							   {{el.name}}
-						   </a>
-                        </span>
-					</div>
-                      <span class="textbox-addon textbox-addon-right" style="right: 0px;top:0px;">
-                     <a href="javascript:void(0)" class="textbox-icon icon-clear" icon-index="0" ms-click="clear" style="width: 27px; height: 27px;"></a></span>
-				</div>-->
-<!--
-				<table id="dg"></table>-->
-				<div class="nodata">未查询到数据</div>
-			</div>
-			<div title="Tab2" data-options="closable:true" style="overflow:auto;padding:20px;">
-				tab2fdsfds
-			</div>
-			<div title="Tab3" data-options="closable:true"  >
-				tab3fdsfds
-			</div>
-			<div title="+" class="last_tab">
 			</div>
 		</div>
 	</div>
